<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name"                         translatable="false">Football Scores</string>
    <string name="hello_world"                      translatable="false">Hello world!</string>

    <!-- Main Screen -->
    <string name="action_settings"                  translatable="false">Settings</string>
    <string name="test_text"                        translatable="false">Test</string>
    <string name="today"                            translatable="false">Today</string>
    <string name="yesterday"                        translatable="false">Yesterday</string>
    <string name="tomorrow"                         translatable="false">Tomorrow</string>
    <string name="champions_league"                 translatable="false">UEFA Champions League</string>
    <string name="bundesliga"                       translatable="false">Bundesliga</string>
    <string name="premierleague"                    translatable="false">Premier League</string>
    <string name="primeradivison"                   translatable="false">Primera Division</string>
    <string name="seriaa"                           translatable="false">Serie A</string>
    <string name="matchday_text"                    translatable="false">Match day</string>
    <string name="group_stage_text"                 translatable="false">Group stages</string>
    <string name="first_knockout_round"             translatable="false">First knockout round</string>
    <string name="quarter_final"                    translatable="false">Quarter Final</string>
    <string name="semi_final"                       translatable="false">Semi Final</string>
    <string name="final_text"                       translatable="false">Final</string>
    <string name="share_text"                       translatable="false">Share</string>
    <string name="mock_text_team_1"                 translatable="false">Team 1</string>
    <string name="mock_text_team_2"                 translatable="false">Team 2</string>

    <!-- About Screen -->
    <string name="about"                            translatable="false">About</string>
    <string name="title_activity_about"             translatable="false">AboutActivity</string>
    <string name="about_text"                       translatable="false">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version by Hiep Le in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com and letronghiep1985@gmail.com

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text"                      translatable="false">This is a widget probably.</string>
    <string name="api_key"                          translatable="false">77430db60bd44f368f6c56dbe6ba1d96</string>
    <string name="dummy_data"                       translatable="false">
        {\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}
    </string>

    <!-- Match Item -->
    <!--<string name="a_content_desc"                  translatable="false">Scores</string>-->
    <!--<string name="b_content_desc"                  translatable="false">Scores</string>-->
    <!--<string name="c_content_desc"                  translatable="false">Scores</string>-->

    <!-- Widget -->
    <string name="widget_subtitle"                  translatable="false">Scores</string>
    <string name="football_widget"                  translatable="false">Football Widget</string>
    <string name="widget_matches_list"              translatable="false">Show matches scores</string>

    <string name="about_content_desc"               translatable="false">Talks about app development and developers</string>
    <string name="image_home_crest_content_desc"    translatable="false">Image to show icon of home team</string>
    <string name="home_name_content_desc"           translatable="false">Show name home team</string>
    <string name="league_content_desc"              translatable="false">Shows the league name </string>
    <string name="match_day_content_desc"           translatable="false">Shows the match day</string>
    <string name="date_content_desc"                translatable="false">Shows date of match</string>
    <string name="time_content_desc"                translatable="false">Shows time of match</string>
    <string name="status_content_desc"              translatable="false">Shows status of match</string>
    <string name="share_button_content_desc"        translatable="false">Button to share info matches by using share provider</string>
    <string name="widget_icon_image_content_desc"   translatable="false">App icon for widget</string>
    <string name="widget_title_content_desc"        translatable="false">Shows the widget app name </string>
    <string name="widget_subtitle_content_desc"     translatable="false">Shows the widget subtitle name </string>
    <string name="score_content_desc"               translatable="false">Shows final score of match</string>
    <string name="image_away_crest_content_desc"    translatable="false">Image to show icon of away team </string>
    <string name="away_name_content_desc"           translatable="false">Show name away team </string>
</resources>
