<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:paddingTop="5dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/home_crest"
            android:contentDescription="@string/image_home_crest_content_desc"
            android:src="@drawable/manchester_city" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:textSize="@dimen/TeamNames"
            android:gravity="center"
            android:text="@string/mock_text_team_1"
            android:contentDescription="@string/home_name_content_desc"
            android:id="@+id/home_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/score_content_desc"
            android:textSize="@dimen/Score"
            android:id="@+id/score_textview"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/status_content_desc"
            android:id="@+id/status_textView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/date_content_desc"
            android:id="@+id/date_textview"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/time_content_desc"
            android:id="@+id/time_textview" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/away_crest"
            android:contentDescription="@string/image_away_crest_content_desc"
            android:src="@drawable/southampton_fc" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/mock_text_team_2"
            android:textSize="@dimen/TeamNames"
            android:contentDescription="@string/away_name_content_desc"
            android:id="@+id/away_name"/>
    </LinearLayout>
</LinearLayout>