<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#bbDEDFDE"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/widgetLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            >

            <LinearLayout
                android:id="@+id/widgetTopBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:contentDescription="@string/widget_title_content_desc"
                    android:id="@+id/tvWidgetAppName" />

                <TextView
                    android:id="@+id/tvWidgetTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_subtitle"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black"
                    android:contentDescription="@string/widget_subtitle_content_desc"

                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivWidgetIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/widget_icon_image_content_desc"
                />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_light" />

        <ListView
            android:id="@+id/lv_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/widget_matches_list"
            >
        </ListView>
    </LinearLayout>

</FrameLayout>