<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green14"
    android:id="@+id/widget_item_container"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/widget_home_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/material_blue_grey_950"
        android:contentDescription="@string/home_name_content_desc"
        android:layout_margin="@dimen/common_widget_margin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/widget_final_score"
        android:textColor="@color/material_blue_grey_950"
        android:layout_alignBottom="@+id/widget_away_home"
        android:contentDescription="@string/score_content_desc"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/widget_away_home"
        android:contentDescription="@string/away_name_content_desc"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/common_widget_margin"
        android:textColor="@color/material_blue_grey_950"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/widget_status"
        android:textColor="@color/material_blue_grey_950"
        android:layout_below="@+id/widget_final_score"
        android:layout_alignLeft="@+id/widget_date"
        android:contentDescription="@string/status_content_desc"
        android:layout_alignStart="@+id/widget_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/widget_date"
        android:textColor="@color/material_blue_grey_950"
        android:layout_below="@+id/widget_status"
        android:layout_alignLeft="@+id/widget_time"
        android:contentDescription="@string/date_content_desc"
        android:layout_alignStart="@+id/widget_time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/widget_time"
        android:textColor="@color/material_blue_grey_950"
        android:contentDescription="@string/time_content_desc"
        android:layout_below="@+id/widget_date"
        android:layout_centerHorizontal="true" />

</RelativeLayout>